# json

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.cpp
.github/workflows/: build.yml
include/: json.hpp  matjson.hpp  matjson3.hpp  serialize.hpp
include/json/: stl_serialize.hpp
include/matjson/: reflect.hpp  std.hpp  stl_serialize.hpp
src/: dump.cpp  impl.cpp  impl.hpp  json.cpp  object.hpp  parser.cpp  parser.hpp  value.cpp  value.hpp
test/: CMakeLists.txt  manual.cpp  test.cpp
